# eurekaprom-io

./: .gitignore  README.md  cabal.haskell-ci  cabal.project  eurekaprom-io.cabal
.github/workflows/: haskell-ci.yml
ableton/: README.md
ableton/interpret-pedals/: InterpretPedals.amxd  README.md
ableton/unravel-simultaneous/: README.md  UnravelSimultaneous.amxd  UnravelSimultaneousResetCC.amxd
app/: Main.hs
haskell/: .gitignore  CHANGELOG.md  README.md  eurekaprom-io.cabal
haskell/.github/workflows/: haskell-ci.yml
haskell/app/: Main.hs
haskell/app-common/App/Common/: Cmdline.hs
haskell/app/App/: Adaptor.hs  Cmdline.hs
haskell/app/App/Mode/: Dump.hs  GenMealy.hs  SimEvents.hs  TestLEDs.hs
haskell/control/Control/: ALSA.hs
haskell/control/Control/ALSA/: Discovery.hs  Handle.hs
haskell/data/Data/: IrregularEnum.hs  MIDI.hs  Mealy.hs
haskell/listen/: Listen.hs
haskell/listen/Listen/: Adaptor.hs  Cmdline.hs
haskell/src/Data/: MIDI.hs  Mealy.hs
haskell/src/EurekaPROM/: IO.hs
haskell/src/EurekaPROM/IO/: ALSA.hs  Alsa.hs  App.hs  Discovery.hs  Input.hs  Listen.hs  MIDI.hs  Output.hs  Simultaneous.hs  Util.hs
haskell/src/EurekaPROM/IO/ALSA/: Discovery.hs  Handle.hs  Listen.hs  MIDI.hs
haskell/test/: Main.hs
haskell/test-lockstep/: Main.hs
haskell/test-lockstep/Test/Lockstep/: Model.hs  SUT.hs
haskell/test-mealy/: Main.hs
haskell/test-mealy/Test/Mealy/: Model.hs  SUT.hs
haskell/test/Test/EurekaPROM/IO/: Arbitrary.hs  Input.hs
listen/: Listen.hs
release/unravel-simultaneous/: next.json  output.json  simultaneous.json  simultaneous.yaml
src/EurekaPROM/: IO.hs
src/EurekaPROM/IO/: Alsa.hs  Discovery.hs  Listen.hs
