cabal-version:      3.0
name:               eurekaprom-io
version:            0.1.0
synopsis:           Interface to the EurekaPROM in IO mode
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common lang
  build-depends:    base >= 4.16 && < 5
  default-language: GHC2021

  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      PackageImports
      TypeFamilies
      UndecidableInstances

  other-extensions:
      OverloadedStrings

  ghc-options:
      -Wall
      -Wprepositive-qualified-module
      -Wunused-packages
      -Widentities
      -Wredundant-constraints

-- High-level API for working with ALSA
--
-- This should be the only place where we depend on @alsa-seq@ and @midi-alsa@.
--
-- This library is not specific to the EurekaPROM.
library control
  import:         lang
  hs-source-dirs: control

  exposed-modules:
      Control.ALSA
      Control.ALSA.Handle

  reexported-modules:
      alsa-seq:Sound.ALSA.Sequencer.Event as Control.ALSA.Event

  other-modules:
      Control.ALSA.Discovery

  build-depends:
    , alsa-seq  >= 0.6 && < 0.7
    , midi-alsa >= 0.2 && < 0.3

library
  import:           lang
  hs-source-dirs:   src

  other-extensions:
      TemplateHaskell
      OverloadedLabels

  exposed-modules:
      --
      -- General purpose data structures
      --

      Data.Mealy
      Data.MIDI

      --
      -- EurekaPROM specific functionality
      --

      EurekaPROM.IO.Input
      EurekaPROM.IO.Output
      EurekaPROM.IO.Simultaneous

  other-modules:
      EurekaPROM.IO.Util

  build-depends:
      -- internal dependencies
    , control

  build-depends:
      -- external dependencies
    , aeson      >= 2.2 && < 2.3
    , containers >= 0.6 && < 0.7
    , midi       >= 0.2 && < 0.3
    , optics     >= 0.4 && < 0.5

executable eurekaprom-io
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app

  other-modules:
      App.Adaptor
      App.Cmdline
      App.Mode.Dump
      App.Mode.GenMealy
      App.Mode.SimEvents
      App.Mode.TestLEDs

  build-depends:
      -- internal dependencies
      control
    , eurekaprom-io

  build-depends:
      -- inherited dependencies
    , aeson
    , containers

  build-depends:
      -- new dependencies
    , evdev                >= 2.3  && < 2.4
    , mtl                  >= 2.2  && < 2.3
    , optparse-applicative >= 0.18 && < 0.19
    , yaml                 >= 0.11 && < 0.12
