cabal-version:   3.0
name:            eurekaprom-io
version:         0.1.0
synopsis:        Interface to the EurekaPROM in IO mode
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@well-typed.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8

common lang
  build-depends:    base >= 4.16 && < 5
  default-language: GHC2021

  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      MultiWayIf
      PackageImports
      TypeFamilies
      UndecidableInstances

  other-extensions:
      OverloadedStrings

  ghc-options:
      -Wall
      -Wprepositive-qualified-module
      -Widentities
      -Wredundant-constraints

-- High-level API for working with ALSA
--
-- This should be the only place where we depend on @alsa-seq@ and @midi-alsa@.
--
-- This library is not specific to the EurekaPROM.
library control
  import:         lang
  hs-source-dirs: control

  exposed-modules:
      Control.ALSA
      Control.ALSA.Handle

  reexported-modules:
      alsa-seq:Sound.ALSA.Sequencer.Event as Control.ALSA.Event

  other-modules:
      Control.ALSA.Discovery

  build-depends:
    , alsa-seq  >= 0.6 && < 0.7
    , midi-alsa >= 0.2 && < 0.3

-- Data representation
--
-- This library is not specific to the EurekaPROM.
library data
  import:         lang
  hs-source-dirs: data

  other-extensions:
      TemplateHaskell
      OverloadedLabels

  exposed-modules:
      Data.Mealy
      Data.MIDI

  build-depends:
    , bytestring >= 0.11 && < 0.12
    , containers >= 0.6  && < 0.7
    , midi       >= 0.2  && < 0.3
    , optics     >= 0.4  && < 0.5

library
  import:           lang
  hs-source-dirs:   src

  exposed-modules:
      EurekaPROM.IO.ALSA
      EurekaPROM.IO.Input
      EurekaPROM.IO.Output
      EurekaPROM.IO.Simultaneous

  build-depends:
      -- internal dependencies
    , control
    , data

library app-common
  import:         lang
  hs-source-dirs: app-common

  exposed-modules:
      App.Common.Cmdline

  build-depends:
      -- internal dependencies
    , control

  build-depends:
      -- new dependencies
    , optparse-applicative >= 0.18 && < 0.19

executable eurekaprom-io
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: app

  other-modules:
      App.Adaptor
      App.Cmdline
      App.Mode.Dump
      App.Mode.GenMealy
      App.Mode.SimEvents
      App.Mode.TestLEDs

  build-depends:
      -- internal dependencies
    , app-common
    , control
    , data
    , eurekaprom-io

  build-depends:
      -- inherited dependencies
    , aeson
    , containers
    , optparse-applicative

  build-depends:
      -- new dependencies
    , evdev >= 2.3  && < 2.4
    , mtl   >= 2.2  && < 2.4
    , yaml  >= 0.11 && < 0.12

test-suite test-eurekaprom-io
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  build-depends:  eurekaprom-io

  other-modules:
    Test.EurekaPROM.IO.Arbitrary
    Test.EurekaPROM.IO.Input

  build-depends:
      -- new dependencies
    , QuickCheck       >= 2.15 && < 2.16
    , tasty            >= 1.5  && < 1.6
    , tasty-quickcheck >= 0.11 && < 0.12

executable test-lockstep
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: test-lockstep
  ghc-options:    -Wno-orphans

  other-modules:
    Test.Lockstep.Model
    Test.Lockstep.SUT

  build-depends:
      -- internal dependencies
    , app-common
    , control
    , data
    , eurekaprom-io

  build-depends:
      -- inherited dependencies
    , containers

  build-depends:
      -- new dependencies
    , ansi-terminal       >= 1.1  && < 1.2
    , mtl                 >= 2.2  && < 2.4
    , quickcheck-dynamic  >= 3.4  && < 3.5
    , quickcheck-lockstep >= 0.6  && < 0.7
    , tasty               >= 1.5  && < 1.6
    , tasty-quickcheck    >= 0.11 && < 0.12